Remove unsused code

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^17.0.0",
     "grunt-filerev": "^2.2.0",
-    "grunt-mocha": "^0.4.12",
     "grunt-modernizr": "^0.6.0",
     "grunt-newer": "^1.1.0",
     "grunt-postcss": "^0.6.0",
@@ -30,9 +29,6 @@
   "engines": {
     "node": ">=0.10.0"
   },
-  "scripts": {
-    "test": "grunt test"
-  },
   "eslintConfig": {
     "extends": [
       "eslint:recommended"
@@ -40,9 +36,7 @@
     "env": {
       "node": true,
       "browser": true,
-      "es6": true,
-      "jquery": true,
-      "mocha": true
+      "es6": true
     },
     "rules": {
       "quotes": [
