--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,10 @@
   "name": "westtowest",
   "private": true,
   "dependencies": {
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "slider-pro": "^1.2.2"
+  },
+  "resolutions": {
+    "promise": "^7.1.1"
   }
 }
