--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "private": true,
   "devDependencies": {
     "autoprefixer": "^6.0.2",
+    "bower": "^1.7.9",
     "grunt": "^0.4.5",
     "grunt-babel": "^5.0.0",
     "grunt-browser-sync": "^2.1.2",
+    "grunt-cli": "^1.2.0",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
@@ -49,5 +51,10 @@
         2
       ]
     }
+  },
+  "scripts": {
+    "build": "grunt build",
+    "deploy": "grunt deploy",
+    "start": "grunt serve"
   }
 }
