--- a/package.json
+++ b/package.json
@@ -1,36 +1,39 @@
 {
   "private": true,
   "devDependencies": {
-    "autoprefixer": "^6.0.2",
+    "@babel/core": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "autoprefixer": "^9.0",
     "bower": "^1.7.9",
-    "grunt": "^0.4.5",
-    "grunt-babel": "^5.0.0",
-    "grunt-browser-sync": "^2.1.2",
+    "grunt": "^1.0",
+    "grunt-babel": "^8.0",
+    "grunt-browser-sync": "^2.0",
     "grunt-cli": "^1.2.0",
-    "grunt-concurrent": "^1.0.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-cssmin": "^0.12.2",
-    "grunt-contrib-htmlmin": "^0.4.0",
-    "grunt-contrib-imagemin": "^1.0.1",
-    "grunt-contrib-uglify": "^0.8.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-eslint": "^17.0.0",
+    "grunt-concurrent": "^3.0",
+    "grunt-contrib-clean": "^2.0",
+    "grunt-contrib-concat": "^1.0",
+    "grunt-contrib-copy": "^1.0",
+    "grunt-contrib-cssmin": "^4.0",
+    "grunt-contrib-htmlmin": "^3.0",
+    "grunt-contrib-imagemin": "^4.0",
+    "grunt-contrib-uglify": "^5.0",
+    "grunt-contrib-watch": "^1.0",
+    "grunt-eslint": "^23.0",
     "grunt-filerev": "^2.2.0",
-    "grunt-gh-pages": "^0.10.0",
-    "grunt-modernizr": "^1.0.2",
+    "grunt-gh-pages": "^4.0",
+    "grunt-modernizr": "^3.0",
     "grunt-newer": "^1.1.0",
-    "grunt-postcss": "^0.6.0",
-    "grunt-sass": "^1.0.0",
-    "grunt-svgmin": "^2.0.1",
-    "grunt-usemin": "^3.0.0",
-    "grunt-wiredep": "^2.0.0",
-    "jit-grunt": "^0.9.1",
-    "time-grunt": "^1.1.0"
+    "grunt-postcss": "^0.9.0",
+    "grunt-sass": "^3.0",
+    "grunt-svgmin": "^6.0",
+    "grunt-usemin": "^3.0",
+    "grunt-wiredep": "^3.0",
+    "jit-grunt": "^0.10.0",
+    "node-sass": "^6.0.0",
+    "time-grunt": "^2.0"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": "^14.0"
   },
   "eslintConfig": {
     "extends": [
@@ -56,5 +59,10 @@
     "build": "grunt build",
     "deploy": "grunt deploy",
     "start": "grunt serve"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 3 versions",
+    "Firefox ESR"
+  ]
 }
